--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,7 @@
 {
-  "eolink_api_key": "5p7XdQZcceceae4b987062f6582a7307429e6359a4bb2ff",
+  "eolink_api_key": "*****",
   "eolink_base_url": "https://api.eolink.com",
-  "cache_ttl": 3600
+  "cache_ttl": 3600,
+  "space_id": "scarfree",
+  "project_id": "FuP13lBce885f9b8437ad8346d3b8576eaf134272a61f7d"
 }
