--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.7.0",
+    "@modelcontextprotocol/inspector":"0.6.0",
     "axios": "^1.6.7",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
